refactor: Clean up controllers and optimize service implementations
Controller Improvements:
- Remove unused imports from AuthController for cleaner code
- Optimize GradeClaimController with better error handling
- Streamline GradeController by removing redundant methods and improving logic
- Clean up GradingWindowController by removing large commented initialization code block

Service Layer Enhancements:
- Optimize GradeService with improved grade management and calculation logic
- Minor improvements to GradingWindowService for better performance
- Major refactoring of ReportService with enhanced reporting capabilities
- Enhance SemesterService with better semester management and validation
- Improve StudentImportService with better import handling and error management
- Optimize SubjectService with enhanced subject operations
- Update TeacherInitializer with improved teacher setup logic
- Enhance UserService with better user management and role handling

Utility Improvements:
- Optimize PeriodLabelUtil with better period handling logic

Code Quality:
- Remove dead code and commented blocks for cleaner codebase
- Improve error handling and validation across services
- Better method organization and code structure
- Enhanced logging and debugging capabilities
- Reduced code complexity while maintaining functionality